--- a/_config.yml
+++ b/_config.yml
@@ -33,14 +33,14 @@ sass:
 #google.plus:        username
 twitter:            singularchel
 facebook:           singularchel
-github:             singularchel
+#github:             singularchel
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          singulatchel
+instagram:          singularchel
 #lastfm:            username
 #tumblr:            username
-#pinterest:         username
+pinterest:          singularchel
 #foursquare:        username
 #steam:              username
 #dribbble:          username
