--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ sass:
 #google.plus:        username
 twitter:            singularchel
 facebook:           singularchel
-#github:             singularchel
+github:             singularchel
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
