Update domain name

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: singular chel
 description: musings about life, mental health, food...or whatever
-url: http://blog.singularchel.com
+url: http://singularchel.com
 logo: halve.png                                       # Site logo
 locale: en_US
 
